segregating data and time
